# BatonLoop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
batonloop/: __init__.py  cli.py  config.py  handoff.py  live_output.py  runner.py  tmux_session.py
batonloop/providers/: __init__.py  base.py  claude.py  codex.py  copilot.py  utils.py
docs/: interactive-tmux-research.md
ralph/: __init__.py  cli.py  config.py  handoff.py  runner.py
ralph/providers/: __init__.py  base.py  claude.py  codex.py  utils.py
tests/: test_claude_provider.py  test_cli.py  test_codex_provider.py  test_config.py  test_copilot_provider.py  test_live_output.py  test_runner.py  test_tmux_session.py
