[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "batonloop"
version = "0.1.0"
description = "Run AI coding agents in a controllable resumable loop."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
batonloop = "batonloop.cli:main"

[tool.setuptools]
packages = ["batonloop", "batonloop.providers"]
